# spacemesh-cuda

./: CMakeLists.txt
rust/: build.rs
